PR FULL CHANGE AND FINISH